# django-class-settings

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .readthedocsv2.yml  .travis.yml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  tasks.py  tox.ini
class_settings/: __init__.py  env.py  importers.py  options.py  parsers.py  settings.py  utils.py
docs/: mkdocs.yml  pyproject.toml  setup.py
docs/files/: tutorial.md
docs/plugins/: generators.py
src/class_settings/: __init__.py  importers.py  parsers.py  settings.py
tests/: test_env.py  test_settings.py
