[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "django-class-settings"
version = "0.2.0"
description = "Effortless class-based settings for Django."
license = "MIT"
authors = ["orlnub123 <orlnub123@gmail.com>"]
readme = "README.md"
repository = "https://github.com/orlnub123/django-class-settings"
documentation = "https://django-class-settings.readthedocs.io/"
keywords = ["django", "settings", "configuration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 1.11",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
packages = [{include = "class_settings"}]

[tool.poetry.dependencies]
python = "^3.5"
django = "*"
python-dotenv = ">=0.7"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b", python = "^3.6"}
coverage = "^4.5"
flake8 = "^3.7"
flake8-bugbear = "^19.8"
invoke = "^1.3"
isort = {version = "^4.3.5", extras = ["pyproject"]}
pre-commit = "^1.20"
pytest = "^5.3"
pytest-cov = "^2.8"
tox = "^3.14"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
