[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "docs"
version = "0"
description = "Documentation of django-class-settings."
license = "ISC"
authors = ["orlnub123 <orlnub123@gmail.com>"]
packages = [{include = "plugins"}]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.0"
markdown = "^3.1"
lxml = "^4.4"

[tool.poetry.plugins."mkdocs.plugins"]
index_generator = "plugins.generators:IndexGeneratorPlugin"
changelog_generator = "plugins.generators:ChangelogGeneratorPlugin"
